// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Login Should render 1`] = `
"<div class=\\"acount\\">
<div class=\\"acount-header\\">
    <img src=\\"../img/logoFormLoveBook.png\\" class=\\"acount-logo\\" alt=\\"LoveBook logo\\">
</div>
<div class=\\"log-content\\">
    <form action=\\"\\" id=\\"login-form\\" class=\\"form\\">
        <label for=\\"login-email\\">Email</label>
        <input type=\\"email\\" id=\\"loginEmail\\" required=\\"\\">
        <label for=\\"login-password\\">Password</label>
        <input type=\\"password\\" id=\\"loginPassword\\" required=\\"\\">
        <div class=\\"error-message\\" id=\\"loginMessages\\"></div>
        <button type=\\"submit\\" id=\\"btnLogin\\">Login</button>
        <div class=\\"division\\">
            <hr class=\\"division-1\\">
            <p class=\\"division-2\\">O</p>
            <hr class=\\"division-3\\">
        </div>
        <div class=\\"login-google\\">
            <img src=\\"../img/icongoogle.png\\" alt=\\"logo google\\" class=\\"logo-google\\">
            <a id=\\"withGoogle\\">Login with google</a>
        </div>
        <div class=\\"pieform\\">
            <p style=\\"font-size: 12px;\\">You do not have an account</p>   
        </div>
        <button type=\\"submit\\" id=\\"signup\\">Sign Up</button>
    </form>
</div></div>"
`;

exports[`SignUp Should render 1`] = `
"<div class=\\"acount\\">
<div class=\\"acount-header\\">
    <img src=\\"../img/logoFormLoveBook.png\\" class=\\"acount-logo\\" alt=\\"LoveBook logo\\">
</div>
<div class=\\"log-content\\">
    <form action=\\"\\" id=\\"login-form\\" class=\\"form\\">
        <label for=\\"login-email\\">Email</label>
        <input type=\\"email\\" id=\\"loginEmail\\" required=\\"\\">
        <label for=\\"login-password\\">Password</label>
        <input type=\\"password\\" id=\\"loginPassword\\" required=\\"\\">
        <div class=\\"error-message\\" id=\\"loginMessages\\"></div>
        <button type=\\"submit\\" id=\\"btnLogin\\">Login</button>
        <div class=\\"division\\">
            <hr class=\\"division-1\\">
            <p class=\\"division-2\\">O</p>
            <hr class=\\"division-3\\">
        </div>
        <div class=\\"login-google\\">
            <img src=\\"../img/icongoogle.png\\" alt=\\"logo google\\" class=\\"logo-google\\">
            <a id=\\"withGoogle\\">Login with google</a>
        </div>
        <div class=\\"pieform\\">
            <p style=\\"font-size: 12px;\\">You do not have an account</p>   
        </div>
        <button type=\\"submit\\" id=\\"signup\\">Sign Up</button>
    </form>
</div></div><div class=\\"acount\\">
        <div class=\\"acount-header\\">
            <img src=\\"../img/logoFormLoveBook.png\\" class=\\"acount-logo\\" alt=\\"LoveBook logo\\">
        </div>
        <div class=\\"log-content\\">
            <form action=\\"\\" id=\\"signupForm\\" class=\\"form\\">
                <label for=\\"signupUserName\\">Username</label>
                <input type=\\"text\\" id=\\"signupUserName\\">
                <label for=\\"signupEmail\\">Email</label>
                <input type=\\"email\\" id=\\"signupEmail\\" required=\\"\\">
                <label for=\\"signupPassword\\">Password</label>
                <input type=\\"password\\" id=\\"signupPassword\\" required=\\"\\">
                <label for=\\"signupPassword2\\">Confirm your password</label>
                <input type=\\"password\\" id=\\"signupPassword2\\" required=\\"\\">
                <div class=\\"error-message\\" id=\\"signupMesseges\\"></div>
                <button type=\\"submit\\" id=\\"btnSendSignUp\\">Sign Up</button>
            </form>
        </div>
        </div>"
`;
